style.css
@import url('https://fonts.googleapis.com/css2?family=Alata&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=League+Spartan:wght@100..900&display=swap');

*{
  margin: 0;
  padding: 0;
}

:root {
  --main: #1D8FA6;
  --bgLight: #F7FAFC;
  --bgDark: #EDF2F7;
  --hover: #1D8FA659;
  --tableHeader: #1D8FA6B3;
  --tableOddRow: #1D8FA666;
  --search: #C8C8C8;
  --textWhite: #FFFFFF;
  --textBlack: #1E1F20;
  --shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
}

body{
  min-height: 100vh;
  background-size: cover;
}

/* Fonts */
.mainTitle{  /* Main Title */
  font-family: "League Spartan";
  font-size: 48px;
  font-style: normal;
  font-weight: 900;
  line-height: normal;
  text-transform: uppercase;
  text-align: center;
  color: var(--main);
  text-shadow: var(--shadow);
}

.secondaryTitle{ /* Nama Lokasi */
  font-family: "League Spartan";
  font-size: 40px;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
  text-transform: capitalize;
}

.sectionTitle{ /* Heading section kategori */
  font-family: "Alata";
  font-size: 28px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
}

.tableHeader{ /* Table Header */
  font-family: "Alata";
  font-size: 24px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
}

.headingFooter{ /* Footer Heading */
  font-family: 'Inter';
  font-size: 20px;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
}

.subheadingFooter{ /* Footer Subheader */
  font-family: 'Inter';
  font-size: 16px;
  font-style: normal;
  font-weight: 600;
  line-height: 1.8;
}

.paragraph{
  font-family: 'Alata';
  font-size: 20px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
}

.textSmall { /* Box kategori */
  font-family: 'Alata';
  font-size: 20px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
}

.textNavbar{ /* Teks biasa di header dan footer */
  font-family: 'Inter';
  font-size: 14px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
  line-height: 1.5;
}

a{
  color: inherit;
  text-decoration: none;
}
form a:hover{
  text-decoration: underline;
}

ul.no-bullets{
  list-style-type: none;
  margin: 0;
  padding: 0;
}

img.auto-width {
  height: 20px;
  width: auto;
}

nav{
  display: flex;
  align-items: center;
  align-content: center;
  position: sticky;
  top: 0;
  z-index: 9999;
  height: 50px;
  background-color: var(--bgDark);
  box-shadow: var(--shadow);
}
nav ul{
  width: 100%;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  align-content: center;
}
nav li{
  height: auto;
  padding: 0 16px;
  align-items: center;
  align-content: space-around;
}
nav li:first-child{
  margin-left: 48px;
  margin-right: auto;
}
nav li:last-child{
  margin-right: 48px;
}
nav a{
  height: 100%;
  display: flex;
  align-items: center;
  align-content: center;
  color: var(--textBlack);
}

.menu-button{
  display: none;
}

.account{
  display: flex;
  flex-direction: column;
  padding: 32px;
  background-color: var(--main);
  border-radius: 20px;
  color: var(--textWhite);
  margin: auto;
}
.account form{
  gap: 24px;
}

.form-input{
  display: flex;
  flex-direction: row;
  align-items: center;
}
.form-input label{
  position: absolute;
  padding: 8px;
}
.form-input input{
  border-radius: none;
  background-color: var(--bgLight);
  box-shadow: var(--shadow);
  color: var(--textBlack);
  padding-left: 38px;
}
.daftar-nama{
  display: flex;
  flex-direction: row;
  gap: 24px;
}

.sidebar{
  position: fixed;
  top: 0;
  right: 0;
  height: 100vh;
  width: 250px;
  z-index: 999;
  background-color: #edf2f733;
  backdrop-filter: blur(10px);
  box-shadow: var(--shadow);
  display: none;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
}
.sidebar li{
  width: 100%;
  height: 50px;
}
.sidebar a{
  width: fit-content;
  height: fit-content;
}

#footer{
  display: flex;
  bottom: 0;
  flex-direction: column;
  align-items: center;
  margin: auto;
  padding: 32px;
  background-color: var(--bgDark);
}
#footer-container{
  display: flex;
  max-width: fit-content;
  color: var(--textBlack);
  flex-direction: column;
  align-items: flex-start;
  justify-items: center;
  gap: 16px;
}
#footer-top{
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: space-between;
  flex-wrap: wrap;
  gap: 24px;
  max-width: fit-content;
}
#footer-bottom{
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  justify-content: space-between;
  flex-wrap: wrap;
  gap: 32px;
  max-width: fit-content;
}
#footer-address{
  display: flex;
  flex-direction: column;
  max-width: 500px;
  flex-grow: 2;
  flex-shrink: 1;
  gap: 8px;
}
.footerItems{
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  max-width: fit-content;
}
#footer-socials{
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 8px;
}

#mainContent{
  display: flex;
  gap: 16px;
  flex-direction: column;
  align-items: center;
  margin: auto;
  padding: 64px 32px;
}
#heading1{
  display: flex;
  max-width: 700px;
}
#paragraph{
  display: flex;
  max-width: 900px;
  text-align: center;
  color: var(--textBlack);
}

.kontak{
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  margin-top: 64px;
  margin-bottom: 64px;
  position: relative;
  height: 100vh;
}
.left{
  display: flex;
  position: absolute;
  top: 50%;
  left: 0;
  translate: 0 -50%;
  height: fit-content;
  width: 95%;
  background-color: var(--main);
}
.textCard{
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  color: var(--textWhite);
  margin: 48px;
  margin-right: 50%;
}
.rightMessageCard{
  display: flex;
  position: absolute;
  z-index: 2;
  background-color: var(--bgDark);
  padding: 32px;
  border-radius: 20px;
  left: 50%;
  width: 40%;
}

.buttonSmall{
  display: inline-flex;
  padding: 1px 5px;
  width: fit-content;
  justify-content: center;
  align-items: center;
  border-radius: 5px;
}
.buttonBig{
  display: inline-flex;
  height: fit-content;
  width: fit-content;
  padding: 0 2.5em;
  justify-content: center;
  align-items: center;
  border-radius: 25px;
}
.greenBorder{
  border: 2px solid var(--main);
  background-color: transparent;
  color: var(--main);
}
.greenFill{
  border: 2px solid var(--main);
  background-color: var(--main);
  color: var(--textWhite);
}
.blackFill{
  border: 2px solid var(--textBlack);
  background-color: var(--textBlack);
  color: var(--textWhite);
}

form{
  display: flex;
  flex-direction: column;
  width: 100%;
  box-sizing: border-box;
}
input, textarea{
  display: flex;
  width: 100%;
  box-sizing: border-box;
  border-style: none;
  border-radius: 5px;
  padding: 8px;
  background-color: var(--bgLight);
  box-shadow: var(--shadow);
  color: var(--textBlack);
  font-family: "Alata";
  font-size: 16px;
  font-style: normal;
  line-height: normal;
  font-weight: 400;
}
input::placeholder,textarea::placeholder{
  color: var(--search);
  font-family: "Alata";
  font-size: 16px;
  font-style: normal;
  line-height: normal;
  font-weight: 400;
}
input:focus, textarea:focus{
  outline: none;
}

form > a:hover{
  text-decoration: underline;
}

.asterisk{
  color: red;
}

#errorMessage{
  color: red;
}

/* Media Query */
/* Laptop */
@media(max-width: 992px){

}

/* Tablet */
@media(max-width: 768px){
  .hideOnMobile{
    display: none;
  }
  .menu-button{
    display: block;
  }
  nav li:first-child{
    margin-left: 0;
  }
  .kontak{
    position: relative;
    height: 600px;
  }
  .rightMessageCard{
    width: 45%;
  }
  .left{
    width: 100%;
    top: 40%;
  }
}

/* Mobile Phone */
@media(max-width: 567px){
  .sidebar{
    width: 100%;
  }
  nav li:first-child{
    margin-left: 0;
  }
  #footer-bottom{
    gap: 24px;
  }
  .kontak{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    position: static;
    height: fit-content;
    margin: 0;
    margin-bottom: 48px;
  }
  .left{
    position: relative;
    translate: 0 0;
    z-index: 1;

    width: 100%;
  }
  .textCard{
    padding: 32px;
    margin: 0;
  }
  .rightMessageCard{
    position: relative;
    z-index: 1;
    left: 0;
    translate: 0 0;
    margin: 32px;
    width: auto;
  }
  .daftar-nama{
    flex-direction: column;
  }
}

